--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Trek Chronological Viewing Guide</title>
+
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/vbs/manifest.json">
+
+    <!-- PWA Meta Tags -->
+    <meta name="theme-color" content="#1e40af">
+    <meta name="application-name" content="VBS">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="VBS">
+    <meta name="mobile-web-app-capable" content="yes">
+
+    <!-- Favicons and Icons -->
+    <link rel="apple-touch-icon" href="/vbs/assets/icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/vbs/assets/icon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/vbs/assets/icon-16x16.png">
 </head>
 <body>
     <div class="container">
