feat: add settings modal and metadata usage controls
- Implemented a settings modal with functionality to open and close it.
- Integrated metadata usage controls within the settings modal.
- Created a new preferences module to manage user preferences and metadata usage statistics.
- Enhanced the types module to include interfaces for metadata usage statistics and controls.
- Added styles for the settings modal to improve user experience.
- Developed unit tests for the new metadata usage controls and preferences functionalities.

Relates to TASK-035 on #149.

--- a/index.html
+++ b/index.html
@@ -102,6 +102,20 @@
                 <input type="file" id="importProgress" accept=".json" style="display: none;"
                        aria-label="Import progress file">
                 <button id="importButton" aria-label="Import progress from file">Import Progress</button>
+                <button id="settingsButton" aria-label="Open settings">Settings</button>
+            </div>
+        </div>
+
+        <!-- Settings Modal -->
+        <div id="settingsModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="settingsModalTitle" style="display: none;">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 id="settingsModalTitle">Settings</h2>
+                    <button id="closeSettingsButton" class="close-button" aria-label="Close settings">×</button>
+                </div>
+                <div class="modal-body" id="settingsModalBody">
+                    <!-- Metadata preferences component will be rendered here -->
+                </div>
             </div>
         </div>
 
